<resources>
    <string name="app_name">library</string>
    <string name="toast_error_network">网络异常</string>
    <string name="toast_error_server">服务器异常</string>
    <string name="toast_error_unknown">未知异常</string>

    <string name="loginactivity_hint">想啥呢你登录了吗，瞎看</string>
    <string name="loginactivity_login">登录</string>
    <string name="loginactivity_register">注册</string>
    <string name="loginactivity_account_hint">账号</string>
    <string name="loginactivity_password_hint">密码</string>
</resources>
