<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/loginactivity_hint"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/loginactivity_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:hint="@string/loginactivity_account_hint"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/loginactivity_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:hint="@string/loginactivity_password_hint"
        android:textSize="25sp"/>
    
    <Button
        android:id="@+id/loginactivity_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/loginactivity_register"/>

    <Button
        android:id="@+id/loginactivity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/loginactivity_login"/>


</LinearLayout>